# OpenglPlayGround

./: CMakeLists.txt  Dependency.cmake  Material_List.txt  README  ways to prevent pixel artifact.txt
shaders/: blinn-phong.fs  blinn-phong.vs  cubemapTex.fs  cubemapTex.vs  frag-phong.fs  frag-phong.vs  lighting.fs  lighting.vs  lighting_mult.fs  simple.vs  simpleTex.fs  simpleTex.vs  simple_vnc.fs  simple_vnc.vs  spriteAnim.fs  spriteAnim.vs
source/: common.cpp  common.h  main.cpp  render.cpp  render.h
